speckle-syntax/src/snapshots/speckle_syntax__file_patcher__tests__patch_multiple_bare_attributes.snap
---
source: speckle-syntax/src/file_patcher.rs
expression: "patch(\"#[speckle]\\nstruct Foo;\\n\\n#[speckle]\\nfn bar() {}\",\n&[EXAMPLE_ID, OTHER_ID])"
---
#[speckle("cb4cb14c-8e40-495a-b17f-6227b622f4a8")]
struct Foo;

#[speckle("aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee")]
fn bar() {}
