speckle-syntax/src/snapshots/speckle_syntax__file_patcher__tests__patch_single_bare_attribute.snap
---
source: speckle-syntax/src/file_patcher.rs
expression: "patch(\"#[speckle]\\nstruct Foo;\", &[EXAMPLE_ID])"
---
#[speckle("cb4cb14c-8e40-495a-b17f-6227b622f4a8")]
struct Foo;
